--- a/MusicApp/app/views/layouts/application.html.erb
+++ b/MusicApp/app/views/layouts/application.html.erb
@@ -5,7 +5,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  
+<% if current_user.nil? %>
+  <% link_to "Login", new_session_url %>
+  <% link_to "Sign up", new_user_url %>
+<% else %>
+  <%= current_user.email %>
+  <%= button_to "Logout", session_url, method: delete %>
+<% end %>
 <%= yield %>
 
 </body>
