--- a/MusicApp/app/views/users/new.html.erb
+++ b/MusicApp/app/views/users/new.html.erb
@@ -8,11 +8,11 @@
     name="authenticity_token"
     value="<%= form_authenticity_token %>">
     
-  <label for="user_email">Email</label>
+  <label for="user_email">Email: </label>
   <input type="text" name="user[email]" id="user_email">
   <br>
   
-  <label for="user_password">Password</label>
+  <label for="user_password">Password: </label>
   <input type="text" name="user[password]" id="user_password">
   <br>
   
